--- a/index.html
+++ b/index.html
@@ -3,45 +3,43 @@
 <p class="has-line-data" data-line-start="1" data-line-end="3">The purpose of this site is to share some of the projects i have previously worked on.<br>
 The site is still heavily work in process, therefore mistakes may be present and sections might be missings.</p>
 <h2 class="code-line" data-line-start=4 data-line-end=5><a id="About_me_4"></a>About me</h2>
-<p class="has-line-data" data-line-start="5" data-line-end="8">Msc. Business Intelligence, Aarhus University<br>
+<p class="has-line-data" data-line-start="5" data-line-end="8">MSc. Business Intelligence, Aarhus University<br>
 Linkedin: <a href="https://linkedin.com/in/martin-sn">https://linkedin.com/in/martin-sn</a><br>
 Kaggle: <a href="https://www.kaggle.com/martinsn">https://www.kaggle.com/martinsn</a></p>
 <h2 class="code-line" data-line-start=9 data-line-end=10><a id="Research_projects_9"></a>Research projects</h2>
 <h5 class="code-line" data-line-start=11 data-line-end=12><a id="Forecasting_Cryptocurrencies_in_a_High_Frequency_Setting_using_Deep_Neural_Networks_11"></a>Forecasting Cryptocurrencies in a High Frequency Setting using Deep Neural Networks</h5>
 <p class="has-line-data" data-line-start="12" data-line-end="13">This project served as my Master’s Thesis</p>
-<p class="has-line-data" data-line-start="14" data-line-end="18">Keywords<br>
+<p class="has-line-data" data-line-start="14" data-line-end="19">Keywords<br>
 – Deep Neural Networks<br>
 – High Frequency<br>
-– Limit Order Book Data</p>
-<h6 class="code-line" data-line-start=19 data-line-end=20><a id="Short_summary_19"></a>Short summary</h6>
-<p class="has-line-data" data-line-start="20" data-line-end="21">The goal of the project was to investiage the predice power of neural networks in terms of forecasting short term price movements of cryptocurrencies. To acquire my data set, i set up a Raspberry Pi to record the limit order book of a select set of cryptocurrencies on <a href="https://pro.coinbase.com/">Coinbase</a>. To record the data i modifed an existing <a href="https://github.com/sadighian/crypto-rl">crypto research toolkit</a> to fit my requirements and then stored the data in an <a href="https://github.com/man-group/arctic">artic tick store</a>. For feature engineering i relied upon findings from similar research, which amongs other things, included volatility estimators from high frequency financial econometrics.</p>
-<p class="has-line-data" data-line-start="22" data-line-end="23">As neural networks can be made infinetly complex i opted for systematically increasing the complexy of the networks in terms of layers, neurons, and features. I then used <a href="https://pure.au.dk/portal/files/34269366/rp10_76.pdf">model confidence sets</a> to determine whether difference in predicitve power in my models were sigificant.</p>
-<p class="has-line-data" data-line-start="24" data-line-end="25">In conclusion my set of models failed to provide any predcitive power in terms of the direction of price movements, but some of the models, especially LSTM models, were able to accurately predit when a large price movement would occur, just not to which direction.</p>
-<p class="has-line-data" data-line-start="26" data-line-end="27">The scope of the project was however severely limited in terms of available compitational resources, as the size of the raw data was above 100 gigabytes, and even simple models could take a significant amout of hours to train.</p>
-<h5 class="code-line" data-line-start=30 data-line-end=31><a id="Forecasting_1day_price_Fluctations_of_Bitcoin_using_Sentiment_Analysis_30"></a>Forecasting 1-day price Fluctations of Bitcoin using Sentiment Analysis</h5>
-<p class="has-line-data" data-line-start="31" data-line-end="32">Research conducted as a part of the Applied Data Science course at Aarhus University</p>
-<ul>
-<li class="has-line-data" data-line-start="33" data-line-end="38">Keywords:<br>
+– Limit Order Book Data<br>
+– Financial Econometrics</p>
+<h6 class="code-line" data-line-start=20 data-line-end=21><a id="Short_summary_20"></a>Short summary</h6>
+<p class="has-line-data" data-line-start="21" data-line-end="22">The goal of the project was to investiage the predice power of neural networks in terms of forecasting short term price movements of cryptocurrencies. To acquire my data set, i set up a server running Linux to record the limit order book of a select set of cryptocurrencies on <a href="https://pro.coinbase.com/">Coinbase</a>. To record the data i modifed an existing <a href="https://github.com/sadighian/crypto-rl">crypto research toolkit</a> to fit my requirements and then stored the data in an <a href="https://github.com/man-group/arctic">artic tick store</a>. For feature engineering i relied upon findings from similar research, which amongs other things, included volatility estimators from high frequency financial econometrics.</p>
+<p class="has-line-data" data-line-start="23" data-line-end="24">As neural networks can be made infinetly complex i opted for systematically increasing the complexy of the networks in terms of layers, neurons, and features. I then used <a href="https://pure.au.dk/portal/files/34269366/rp10_76.pdf">model confidence sets</a> to determine whether difference in predicitve power in my models were sigificant.</p>
+<p class="has-line-data" data-line-start="25" data-line-end="26">In conclusion my set of models failed to provide any predcitive power in terms of the direction of price movements, but some of the models, especially LSTM models, were able to accurately predit when a large price movement would occur, however not to which direction.</p>
+<p class="has-line-data" data-line-start="27" data-line-end="28">The scope of the project was however severely limited in terms of available compitational resources, as the size of the raw data was above 100 gigabytes, and even simple models could take a significant amout of hours to train.</p>
+<h5 class="code-line" data-line-start=29 data-line-end=30><a id="Forecasting_1day_price_Fluctations_of_Bitcoin_using_Sentiment_Analysis_29"></a>Forecasting 1-day price Fluctations of Bitcoin using Sentiment Analysis</h5>
+<p class="has-line-data" data-line-start="30" data-line-end="31">Research conducted as a part of the Applied Data Science course at Aarhus University</p>
+<p class="has-line-data" data-line-start="32" data-line-end="37">Keywords<br>
 – Natural Language Processing<br>
+– Sentiment Analysis<br>
 – Web Scraping<br>
-– XGBoost</li>
-</ul>
-<p class="has-line-data" data-line-start="38" data-line-end="39">Short summary</p>
-<h5 class="code-line" data-line-start=40 data-line-end=41><a id="CAPM_inferences_about_Bitcoin_and_the_Market_Proxy_Problem_40"></a>CAPM inferences about Bitcoin and the Market Proxy Problem</h5>
-<ul>
-<li class="has-line-data" data-line-start="41" data-line-end="44">Keywords:<br>
+– XGBoost</p>
+<h6 class="code-line" data-line-start=38 data-line-end=39><a id="Short_summary_38"></a>Short summary</h6>
+<p class="has-line-data" data-line-start="39" data-line-end="40">The goal of the project was to investage whether performing setiment analysis on Bitcoin related tweets and news articles, could aid a time-series model in terms of predicing the direction of the next day price moment. To acquire our data-set of tweets we used the Twitter API to collect a set of tweets from the past few months, and to acquire our news articles we scraped the subforum for news articles on <a href="https://bitcointalk.org/">bitcointalk.org</a>. For our sentiment analysis we went for a lexicographic approach with the <a href="http://nlg.csie.ntu.edu.tw/nlpresource/NTUSD-Fin/">NTUSD-Fin lexicon</a>, which is specifically crafted for tweets related to financial assets.</p>
+<p class="has-line-data" data-line-start="41" data-line-end="42">When then created custom metrics for the Bitcoin sentiment for each day, where the sentiment scores was a weighted sum of the days corresponding tweets, and tweets where weighted by their impact in terms of likes, comments and retweets.</p>
+<p class="has-line-data" data-line-start="43" data-line-end="44">To conclude the project we created a XGBoost model with the goal of, in combination with features inspired time-series econometrics, predic the direct of the next day price flucation of Bitcoin.</p>
+<h5 class="code-line" data-line-start=45 data-line-end=46><a id="CAPM_inferences_about_Bitcoin_and_the_Market_Proxy_Problem_45"></a>CAPM inferences about Bitcoin and the Market Proxy Problem</h5>
+<p class="has-line-data" data-line-start="46" data-line-end="47">This project served as my Bachelor’s Thesis.</p>
+<p class="has-line-data" data-line-start="48" data-line-end="51">Keywords<br>
 – Asset Pricing<br>
-– CAPM</li>
-</ul>
-<p class="has-line-data" data-line-start="46" data-line-end="47">Short summary</p>
-<h2 class="code-line" data-line-start=50 data-line-end=51><a id="Personal_projects_50"></a>Personal projects</h2>
-<h5 class="code-line" data-line-start=52 data-line-end=53><a id="Coinriskxyz_52"></a>Coinrisk.xyz</h5>
-<p class="has-line-data" data-line-start="53" data-line-end="54">Keywords</p>
-<ul>
-<li class="has-line-data" data-line-start="54" data-line-end="55">Javascript</li>
-<li class="has-line-data" data-line-start="55" data-line-end="56">React</li>
-<li class="has-line-data" data-line-start="56" data-line-end="57">Financial Econometrics</li>
-<li class="has-line-data" data-line-start="57" data-line-end="59">Visualizations</li>
-</ul>
-<h2 class="code-line" data-line-start=59 data-line-end=60><a id="Kaggle_Projects_59"></a>Kaggle Projects</h2>
+– Captial Asset Pricing Model (CAPM)</p>
+<h6 class="code-line" data-line-start=52 data-line-end=53><a id="Short_summary_52"></a>Short summary</h6>
+<p class="has-line-data" data-line-start="53" data-line-end="54">The main goal of this project was to investigate whether using a market proxy partly consisting of Bitcoin would increase the vailidy of CAPM when tested, compared to a market proxy without Bitcoin. As the baseline market portfolio i used <a href="https://mba.tuck.dartmouth.edu/pages/faculty/ken.french/Data_Library/det_10_ind_port.html">10 industry portfolios</a> and then added Bitcoin with incrementally increasing weights, to see whether the signficant alpha which falisifies CAPM would become insignificant. The alpha did indeed become insignifcant, but only at weights far larger than Bitcoins acual market cap and it seems more probable that adding Bitcoin to the market proxy merely served as statistical noise.</p>
+<h2 class="code-line" data-line-start=55 data-line-end=56><a id="Kaggle_Projects_55"></a>Kaggle Projects</h2>
+<h5 class="code-line" data-line-start=57 data-line-end=58><a id="Optiver_Realized_Volatily_Predictionhttpswwwkagglecomcompetitionsoptiverrealizedvolatilityprediction_57"></a><a href="https://www.kaggle.com/competitions/optiver-realized-volatility-prediction">Optiver Realized Volatily Prediction</a></h5>
+<p class="has-line-data" data-line-start="58" data-line-end="59">The goal of this project was to predit the realized volatility for the next 30 minutes using high frequency data for a large set of stocks. The project was complicated as the stock names and their timestaps had been obscurated, but i managed to come up with an approriate cross validation setup and by using a gradient boosting algorithm i was able to get a reasonable result.</p>
+<h5 class="code-line" data-line-start=61 data-line-end=62><a id="Aarhus_University_Data_Mining_Competitionhttpswwwkagglecomcompetitionsaudm01_61"></a><a href="https://www.kaggle.com/competitions/audm01">Aarhus University Data Mining Competition</a></h5>
+<p class="has-line-data" data-line-start="62" data-line-end="63">In-class competition with the goal of predicting customer churn for a telecom. The dataset was a fairly straight forward tabular set, which featured a few challenges in terms of missing values and formatting. The winning solution was an ensemble of sevral gradient boosting algorithms.</p>
 </body></html>
